# xfce4-mate-applet-loader-plugin

./: CMakeLists.txt  LICENSE  README.md  applet.cpp  mateappletloader.desktop  register.c
